add pdf rag