@@ -1,4 +1,4 @@
-package com.autumnia.openai.pgvector.config;
+package com.autumnia.rag.pdfrag.config;
 
 import jakarta.annotation.PostConstruct;
 import lombok.RequiredArgsConstructor;
@@ -19,33 +19,37 @@ import java.util.stream.Collectors;
 @Slf4j
 @Configuration
 @RequiredArgsConstructor
-public class HotelLoader {
+public class MovieLoader {
     private  final VectorStore vectorStore;
     private final JdbcClient jdbcClient;
 
-    @Value("classpath:hotel_data.txt")
+    @Value("classpath:movie_plots_korean.txt")
     Resource resource;
+
 
     @PostConstruct
     public void init() throws Exception {
-        Integer count=jdbcClient.sql("select count(*) from hotel_vector")
+        Integer count=jdbcClient.sql("select count(*) from vector_store")
                 .query(Integer.class)
                 .single();
-        System.out.println("No of Records in the PG Vector Store="+count);
+        log.info("No of Records in the PG Vector Store: {}", count);
+
 
         if(count==0){
             List<Document> documents = Files.lines(resource.getFile().toPath())
                     .map(Document::new)
-                    .collect(Collectors.toList());
+//                    .collect(Collectors.toList());
+                    .toList();
             TextSplitter textSplitter = new TokenTextSplitter();
             for(Document document : documents) {
                 List<Document> splitteddocs = textSplitter.split(document);
-                System.out.println("before adding document: " + document.getFormattedContent());
-                vectorStore.add(splitteddocs); //임베딩
-                System.out.println("Added document: " + document.getFormattedContent());
-                Thread.sleep(1000); // 1초
+                System.out.println("before adding document: " + document.getText());
+                vectorStore.add(splitteddocs);
+                System.out.println("Added document: " + document.getText());
+                Thread.sleep(1000);
             }
             System.out.println("Application is ready to Serve the Requests");
         }
     }
+
 }
